fix: metaitem titles overflow

--- a/src/common/MetaItem/styles.less
+++ b/src/common/MetaItem/styles.less
@@ -317,11 +317,15 @@
 
         .title-label {
             flex: 1;
-            max-height: 2.4em;
+            max-height: 2.6em;
             padding-left: 1.5rem;
             font-weight: 600;
             text-align: center;
             color: var(--primary-foreground-color);
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
 
             &:only-child {
                 padding: 0 0.5rem;
